# ListAgent

./: .gitignore  README.md  _fix_lib.py  agent_test.html  build_exe.bat  fix_xlsx_dimension.py  run.bat  system_prompt.json  test.html
.github/workflows/: windows-build.yml
listagent-app/: index.html  package-lock.json  package.json
listagent-app/skills/: bios-build.json  bios-flash.json
listagent-app/src/: main.ts  style.css
listagent-app/src-tauri/: Cargo.toml  tauri.conf.json
listagent-app/src-tauri/icons/: icon.icns
listagent-app/src-tauri/src/: lib.rs
test/: README_edk2_fault_injector.md  agent_test.html  edk2_fault_injector.py  test_case.html  test_case.json  test_case.md  test_case_google_gemma-4-31b-qat.json
