[package]
name = "ListAgent"
version = "1.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ListAgent"
path = "src/main.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "process", "io-util"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Enable link-time optimization
codegen-units = 1      # Maximize optimizations by using a single codegen unit
panic = "abort"        # Disable panic unwinding to save size
strip = true           # Strip symbols from the executable
